--- a/hyprland.conf
+++ b/hyprland.conf
@@ -173,8 +173,8 @@ bind = , XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bind = $mainMod, t, togglegroup
 
 # Cycling through windows in a group
-bind = SUPER+ALT, J, changegroupactive, f
-bind = SUPER+ALT, K, changegroupactive, b
+bind = SUPER+Control_L, J, changegroupactive, f
+bind = SUPER+Control_L, K, changegroupactive, b
 
 # Move In/Out of group window with mainMod + motion keys
 bind = $mainMod SHIFT, h, movewindoworgroup, l
